--- a/jwt-react-app/package.json
+++ b/jwt-react-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
-    "cra-template": "1.2.0",
+    "cra-template-typescript": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build && serve -s build",
+    "client": "powershell \"iwr http://localhost:5000/_/ts -OutFile src/api/ApiClient.ts\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +35,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.10",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
