--- a/jwt-react-app/package.json
+++ b/jwt-react-app/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
+    "@types/jwt-decode": "^2.2.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
