--- a/auth-web-api/AuthWebApi.csproj
+++ b/auth-web-api/AuthWebApi.csproj
@@ -28,4 +28,8 @@
 		<Folder Include="Helper\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
 </Project>
